16/4/1
Add Sunshine Lily and Moonlight Lily.
First clean up.